fix: dynamic ABC block spacing and headless script encoding
HAP loader now calculates block offsets based on actual entry sizes
instead of fixed 1MB spacing, fixing memory conflicts when ABC blocks
exceed 1MB (e.g., Melotopia's 5MB modules block). Also fixes
UnmappableCharacterException in headless script and mapfile zsh compat.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>